# MimOSA-Release

./: .abacus.donotdelete  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  ISSUES_TO_ADDRESS.md  LICENSE  M2.1_COMPLETION_REPORT.md  M2.2_COMPLETION_REPORT.md  M3.1_COMPLETION_REPORT.md  M3.2_COMPLETION_REPORT.md  M4.1_COMPLETION_REPORT.md  M4.2_COMPLETION_REPORT.md  M4.3_COMPLETION_REPORT.md  M5.1_COMPLETION_REPORT.md  M5.2_COMPLETION_REPORT.md  M5.3_COMPLETION_REPORT.md  M5.4_COMPLETION_REPORT.md  M6.1_COMPLETION_REPORT.md  M6.2_COMPLETION_REPORT.md  M6.3_COMPLETION_REPORT.md  M6.4_COMPLETION_REPORT.md  M7.1_COMPLETION_REPORT.md  M7.2_COMPLETION_REPORT.md  M7.3_COMPLETION_REPORT.md  M7.4_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  PHASE_4_HANDOVER.md  PHASE_5_COMPLETION_REPORT.md  PHASE_5_HANDOVER.md  PHASE_6_COMPLETION_REPORT.md  PHASE_6_HANDOVER.md  PHASE_7_COMPLETION_REPORT.md  PHASE_7_HANDOVER.md  PHASE_8_COMPLETION_REPORT.md  PHASE_8_HANDOVER.md  README.md  (+9 more)
data/avatars/: README.md
debian/: changelog  control  copyright  mimosa.desktop  postinst  postrm  rules
docs/: ADVANCED_FEATURES.md  APPLICATION_CONTROL.md  ARCHITECTURE.md  AVATAR_SYSTEM.md  COMPANION_UI.md  CONTINUOUS_LEARNING.md  CUSTOM_SKILLS.md  FILE_OPERATIONS.md  INTENT_SYSTEM.md  KUBUNTU_INTEGRATION.md  MEMORY_SYSTEM.md  POLISH_AND_TESTING.md  PRIVACY.md  RESEARCH_SYSTEM.md  TROUBLESHOOTING.md  UI_ARCHITECTURE.md  UPGRADING.md  USER_GUIDE.md  VISEME_SYSTEM.md  VOICE_PIPELINE.md
mimosa/: __init__.py
mimosa/avatar/: __init__.py  animator.py  avatar_window.py  base_renderer.py  cache_manager.py  emotions.py  generator.py  gestures.py  lip_sync.py  mouth_shapes.py  performance.py  preview_dialog.py  renderer_2d.py  sprite_processor.py  viseme_mapper.py  voice_library.py
mimosa/core/: __init__.py  conversation_manager.py  error_reporter.py  intent_router.py  runtime.py
mimosa/learning/: __init__.py  context_analyzer.py  continuous_learner.py  pattern_detector.py  proactive_questioner.py
mimosa/llm/: __init__.py  abacus_provider.py  anthropic_provider.py  base_provider.py  local_provider.py  openai_provider.py  persona.py  provider_factory.py
mimosa/memory/: __init__.py  consolidator.py  conversation_store.py  memory_consolidator.py  paths.py  preference_learner.py  privacy_guard.py  profile_manager.py  relationship_tracker.py  semantic_memory.py  vector_store.py
mimosa/onboarding/: __init__.py  conversation_engine.py  fact_extractor.py  onboarding_manager.py  question_bank.py  response_analyzer.py
mimosa/research/: __init__.py  research_engine.py  search.py  sources.py  synthesizer.py  token_budget.py
mimosa/skills/: __init__.py  application.py  base_skill.py  calculator_skill.py  custom_skill.py  file_ops.py  greeting_skill.py  question_skill.py  research_skill.py  system_control.py  system_info.py  task_skill.py  time_skill.py  weather_skill.py
mimosa/suggestions/: __init__.py  proactive_suggester.py  suggestion_engine.py
mimosa/system/: __init__.py  app_registry.py  capability_detector.py  file_safety.py  hardware_detector.py  kde_integration.py  system_control.py  system_optimizer.py  system_profiler.py
mimosa/tasks/: __init__.py  error_learner.py  resource_monitor.py  task_queue.py
mimosa/training/: __init__.py  data_augmenter.py  dependencies.py  name_analyzer.py  synthetic_generator.py  trainer.py
mimosa/ui/: __init__.py  app.py  audio_sync.py  avatar_assets.py  avatar_renderer.py  avatar_window.py  chat_logic.py  chat_window.py  environment.py  expressions.py  memory_viewer.py  mouth_animator.py  onboarding_dialog.py  profile_viewer.py  settings_dialog.py  settings_logic.py  setup_wizard.py  setup_wizard_dialog.py  state_bridge.py  test_wakeword_dialog.py  training_dialog.py  tray.py  tray_logic.py  ui_config.py  viseme_mapper.py  window_manager.py
mimosa/utils/: __init__.py  config.py  logging_setup.py  updates.py
mimosa/voice/: __init__.py  audio_manager.py  phoneme_extractor.py  stt.py  tts.py  voice_loop.py  wake_word.py
packaging/: README.md  build-deb.sh
scripts/: health_check.py  test_full_loop.py  test_intents.py  test_voice_loop.py
tests/: conftest.py  test_app_config.py  test_application.py  test_audio_sync.py  test_avatar_animation.py  test_avatar_generation.py  test_avatar_infrastructure.py  test_avatar_performance.py  test_avatar_renderer.py  test_avatar_window.py  test_capability_detector.py  test_chat.py  test_consolidator.py  test_context_analyzer.py  test_continuous_learner.py  test_conversation_engine.py  test_conversation_intelligence.py  test_conversation_persistence.py  test_conversation_store.py  test_custom_skill.py  test_data_augmenter.py  test_error_learner.py  test_error_reporter.py  test_expressions.py  test_fact_extractor.py  test_file_ops.py  test_greeting_personalization.py  test_hardware_detector.py  test_integration_e2e.py  test_intent_router.py  test_kde_integration.py  test_learning_config.py  test_lipsync_integration.py  test_logging_setup.py  test_memory_consolidator.py  test_memory_paths.py  test_memory_viewer.py  test_mouth_animator.py  test_name_analyzer.py  test_onboarding_config.py  (+50 more)
tests/integration/: __init__.py  test_avatar_pipeline.py  test_setup_to_launch.py
