[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimosa-assistant"
version = "2.0.0-beta"
description = "MimOSA -- a privacy-first, local-first voice assistant for Linux with a desktop avatar."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "A. Henry" }]
keywords = ["voice-assistant", "privacy", "local-first", "linux", "speech", "offline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# Core runtime dependencies. The voice stack and GTK avatar are optional extras
# (see [project.optional-dependencies]) so a base install stays lean and a
# headless/offline deployment never pulls heavy wheels it will not use.
dependencies = [
    "requests>=2.31,<3.0",
    "python-dotenv>=1.0,<2.0",
    "psutil>=5.9,<8.0",
    "send2trash>=1.8,<2.2",
]

[project.optional-dependencies]
# Full local voice pipeline (wake word + STT + TTS + audio I/O).
#
# openWakeWord declares a *mandatory* `tflite-runtime` dependency on Linux, but
# that wheel is only published for CPython <= 3.11. On Python 3.12+ (the default
# on Ubuntu/Kubuntu 24.04) pip cannot resolve it and the whole install aborts.
# openWakeWord runs perfectly on onnxruntime alone, so we:
#   * pull it via pip only where a tflite-runtime wheel exists (python < 3.12),
#   * always ship onnxruntime for the ONNX backend, and
#   * (re)install openWakeWord itself with `--no-deps` from install.sh so it is
#     present on every Python version without dragging in tflite-runtime.
voice = [
    "onnxruntime>=1.10,<2",
    "openwakeword>=0.6,<0.7; python_version < '3.12'",
    "openai-whisper>=20231117",
    "piper-tts>=1.2,<2.0",
    "pyaudio>=0.2.13,<0.3",
]
# GTK4 desktop avatar (needs system GObject/GTK packages too -- see INSTALL.md).
ui = [
    "PyGObject>=3.42,<3.52",
    "pycairo>=1.20",
]
# On-device semantic memory (pulls in PyTorch -- large).
semantic = [
    "chromadb>=0.4,<0.6",
    "sentence-transformers>=2.2,<4.0",
]
# Developer tooling.
dev = [
    "pytest>=8.0,<9.0",
]
# Everything (convenience meta-extra). See the note on the `voice` extra above
# for why openWakeWord is version-marker-guarded and onnxruntime is explicit.
all = [
    "onnxruntime>=1.10,<2",
    "openwakeword>=0.6,<0.7; python_version < '3.12'",
    "openai-whisper>=20231117",
    "piper-tts>=1.2,<2.0",
    "pyaudio>=0.2.13,<0.3",
    "PyGObject>=3.42,<3.52",
    "pycairo>=1.20",
]

[project.urls]
Homepage = "https://github.com/servicefly/MimOSA"
Repository = "https://github.com/servicefly/MimOSA"

[project.scripts]
mimosa = "mimosa.ui.app:main"

[tool.setuptools.packages.find]
include = ["mimosa*"]
exclude = ["tests*"]

# Note: pytest configuration lives in pytest.ini (kept as the single source of
# truth for test discovery and markers).
